# openvino-anpr-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  main.cpp
dockerfiles/: Dockerfile  Dockerfile-dev
models/: detection.xml  recognition.xml
src/: Config.cpp  Config.h  ILogger.h  ITimer.h  LPDetector.cpp  LPDetector.h  LPRecognizer.cpp  Main.cpp  Profile.h  Template.cpp  Template.h
src/app/: BaseCarTracker.cpp  BaseCarTracker.h  CalibParams.cpp  CalibParams.h  CalibParamsUpdater.cpp  CalibParamsUpdater.h  CameraScope.cpp  CameraScope.h  Car.cpp  Car.h  Constants.h  Counter.h  DetectionService.cpp  DetectionService.h  LPDetector.cpp  LPDetector.h  LPRecognizer.cpp  LPRecognizer.h  LPRecognizerService.cpp  LPRecognizerService.h  LicensePlate.cpp  LicensePlate.h  MaskCarTracker.cpp  MaskCarTracker.h  TemplateMatching.cpp  TemplateMatching.h  Utils.cpp  Utils.h
src/client/: CameraClientLauncher.cpp  CameraClientLauncher.h  FrameData.cpp  FrameData.h  GstreamerReader.cpp  GstreamerReader.h
src/package_sending/: ImageWriterService.cpp  ImageWriterService.h  Package.cpp  Package.h  PackageSender.cpp  PackageSender.h  Snapshot.cpp  Snapshot.h  SnapshotSender.cpp  SnapshotSender.h
utils/scripts/: script.py
